--- a/_config.yml
+++ b/_config.yml
@@ -13,39 +13,59 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Yutong Felicia Wang
-email: yw590@cam.ac.uk
-description: "PhD student, Phonetics and Phonology Lab, University of Cambridge"
-baseurl: ""
-url: "https://yutongwang.github.io"
+title: "Yutong (Felicia) Wang"
+email: "yw590@cam.ac.uk"
+description: "PhD student in Theoretical and Applied Linguistics, Phonetics and Phonology Lab, University of Cambridge"
+baseurl: ""  # Don't change this
+url: "https://yutongfwang.github.io"  # Updated to match renamed repo
 minimal_mistakes_skin: default
 search: true
+
+# Author info
+author:
+  name   : "Yutong (Felicia) Wang"
+  avatar : "/assets/images/IMG_4017.jpg"
+  bio    : "PhD student in Theoretical and Applied Linguistics at the University of Cambridge. Interested in acoustic phonetics, phonetics-phonology interface, and incomplete contrast neutralisation."
+  location: "Cambridge, UK"
+  links:
+    - label: "Lab Profile"
+      icon: "fas fa-fw fa-university"
+      url: "https://www.phonetics.mmll.cam.ac.uk/staff/yutong-wang"
+    - label: "Google Scholar"
+      icon: "ai ai-google-scholar"
+      url: "https://scholar.google.com"  # Add your personal GS link here
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter"
+      url: "https://x.com/ythun_wan?s=11&t=tl8HBKumDgpecXsLPgGgnQ"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/YutongFWang"
+
+# Footer links
+footer:
+  links:
+    - label: "Lab Profile"
+      icon: "fas fa-fw fa-university"
+      url: "https://www.phonetics.mmll.cam.ac.uk/staff/yutong-wang"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter"
+      url: "https://x.com/ythun_wan?s=11&t=tl8HBKumDgpecXsLPgGgnQ"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/YutongFWang"
 
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
-# Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 5
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Europe/London
 
+# Content structure
 include:
   - _pages
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
-
-# Plugins (previously gems:)
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
@@ -54,32 +74,7 @@ plugins:
   - jemoji
   - jekyll-include-cache
 
-author:
-  name   : "Yutong Felicia Wang"
-  avatar : "/assets/images/IMG_4017.jpg"
-  bio    : "PhD student, Phonetics and Phonology Lab, University of Cambridge"
-  links:
-    - label: "Lab Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://www.phonetics.mmll.cam.ac.uk/staff/yutong-wang"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://x.com/ythun_wan?s=11&t=tl8HBKumDgpecXsLPgGgnQ"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-
-footer:
-  links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://x.com/ythun_wan?s=11&t=tl8HBKumDgpecXsLPgGgnQ"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-
 defaults:
-  # _posts
   - scope:
       path: ""
       type: posts
@@ -87,10 +82,10 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: true
+      comments: false
       share: true
       related: true
-  # _pages
+
   - scope:
       path: "_pages"
       type: pages
@@ -101,6 +96,7 @@ defaults:
 category_archive:
   type: liquid
   path: /categories/
+
 tag_archive:
   type: liquid
   path: /tags/
