--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,18 @@
 main:
+  - title: "Home"
+    url: /
+  - title: "Blog"
+    url: /blog/
+  - title: "CV"
+    url: /cv/
+  - title: "Publications"
+    url: /publications/
+  - title: "Research"
+    url: /research/
+  - title: "Teaching"
+    url: /teaching/
+  - title: "Contact"
+    url: /contact/
   - title: "Posts"
     url: /posts/
   - title: "Categories"
