--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Yutong (Felicia) Wang"
+title: "Homepage"
 email: "yw590@cam.ac.uk"
 description: "PhD student in Theoretical and Applied Linguistics, Phonetics and Phonology Lab, University of Cambridge"
 baseurl: ""  # Don't change this
