--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,9 @@ author:
     - label: "Lab Profile"
       icon: "fas fa-fw fa-university"
       url: "https://www.phonetics.mmll.cam.ac.uk/staff/yutong-wang"
-    - label: "Google Scholar"
-      icon: "ai ai-google-scholar"
-      url: "https://scholar.google.com"  # Add your personal GS link here
+     - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://uk.linkedin.com/in/yutong-wang-8046b1233"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter"
       url: "https://x.com/ythun_wan?s=11&t=tl8HBKumDgpecXsLPgGgnQ"
