--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ mathjax: true
 author:
   name   : "Yutong (Felicia) Wang"
   avatar : "/assets/images/IMG_4017.jpg"
-  bio    : "PhD student in Theoretical and Applied Linguistics at the University of Cambridge."
+  bio    : "王语彤 · PhD student in Theoretical and Applied Linguistics at the University of Cambridge."
   location: "Cambridge, UK"
   links:
     - label: "Lab Profile"
